# calculo-avanzado-asistido

./: .gitignore  ACTIVATE_JULES_RESCUE.md  AGENTS.md  AG_RIEMANN_RESCUE_LAB.py  ALIGN_SPACING_DISTS.py  ALL_ZEROS_FINAL.json  ALL_ZEROS_FINAL_meta.json  ANTIGRAVITY_EXPERIMENT_CRONOS_RIEMANN_GUE_V1.py  ANTIGRAVITY_MASTER_PROMPT_CALCULO3_CRONOS.py  ANTIGRAVITY_SIGN_REPOSITORY.py  CRONOS_MASTER_AUDITOR.py  GAHENAX_LLL_WARFARE_PATCHKIT.py  IMPLEMENTATION_PLAN.md  MAKE_FINAL_REPORT.py  README.md  RIEMANN_DYSON_FORCE_ANALYSIS.py  RIEMANN_GUE_STATS.py  RIEMANN_TRIPWIRE_DRILL_V3.py  RIEMANN_TRIPWIRE_MINER_V2.py  RIEMANN_ZERO_FILTER_UA_MACRO.py  SIGNATURE.md  TIME_CRYSTAL_FLOQUET_SPECTRUM.py  ZETA_ENTROPY_GENERATOR.py  analyze_tripwire_stats.py  artifact_manifest.json  bench_dim8.py  bench_p_over_np.py  collider_analysis_report.json  collider_events.json  collider_events_highres.json  collider_resonance_analyzer.py  collider_to_spectrum.py  cronos_report.json  drill_final_coverage.jsonl  drill_worst_block.jsonl  energy_recovery_test.py  final_verdict.md  index.html  mersenne_evidence_M127.json  mine_riemann_zeros.py  (+19 more)
tools/mersenne-worker-rs/: Cargo.toml  build_out.txt
tools/mersenne-worker-rs/src/: main.rs  quantum_resonance_kernel.rs  sieve.rs
tools/mersenne-worker-rs/target_force/release/: mersenne-worker-rs.d
tools/mersenne-worker-rs/target_force/release/.fingerprint/ahash-2205ab6c35257fcf/: lib-ahash
tools/mersenne-worker-rs/target_force/release/.fingerprint/ahash-2bb9acea49456253/: build-script-build-script-build
(+339 files in other folders)
