[package]
name = "mersenne-worker-rs"
version = "1.0.0"
edition = "2021"
authors = ["Gahenax AI"]
description = "High-performance Mersenne prime search worker using Lucas-Lehmer and Rayon."

[dependencies]
# Aritmética de precisión arbitraria (FFT-based multiplication)
malachite = { version = "0.4.4", features = ["naturals_and_integers", "serde"] }

# Paralelismo masivo
rayon = "1.8"

# Redes de Tensores y Álgebra Lineal
ndarray = { version = "0.15", features = ["serde"] }

# Serialización y CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Telemetría de bajo nivel
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"

[profile.release]
lto = false
codegen-units = 16
opt-level = 3
